done for the day

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@
     --dark: #362e4f;
     --darkOpacity: #3b3b4930;
     --light: #efeef6;
+    --selectionColor: #00e5ff;
 }
 
 head, style, script {
