Added dotnet backend

--- a/vue/styles/globals.scss
+++ b/vue/styles/globals.scss
@@ -27,7 +27,7 @@ body {
 #root {
     flex-grow: 1;
     min-height: 100%;
-    background-image: url('/paper.jpeg');
+    background-image: url('/assets/paper.jpeg');
     background-size: 200px;
 }
 
