--- a/Views/Shared/Layout.cshtml
+++ b/Views/Shared/Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/globals.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     @RenderSection("Styles", false)
+    <script>window.PageProps=@Html.Raw(ViewData["PageProps"] != null ? ViewData["PageProps"] : "{}")</script>
 </head>
 <body>
     @RenderBody()
